@startuml

title __MVPPATTERN.APP's Class Diagram__\n

  namespace com.ifgoiano.mvppattern {
    class com.ifgoiano.mvppattern.BuildConfig {
    }
  }
  

  namespace com.ifgoiano.mvppattern {
    namespace model {
      class com.ifgoiano.mvppattern.model.Country {
      }
    }
  }
  

  namespace com.ifgoiano.mvppattern {
    namespace presenter {
      class com.ifgoiano.mvppattern.presenter.CountriesAPIPresenter {
      }
    }
  }
  

  namespace com.ifgoiano.mvppattern {
    namespace presenter {
      class com.ifgoiano.mvppattern.presenter.CountriesLocalRepositoryPresenter {
      }
    }
  }
  

  namespace com.ifgoiano.mvppattern {
    namespace presenter {
      class com.ifgoiano.mvppattern.presenter.CountriesRemoteRepositoryPresenter {
      }
    }
  }
  

  namespace com.ifgoiano.mvppattern {
    namespace presenter {
      namespace api {
        class com.ifgoiano.mvppattern.presenter.api.CountriesAPIService {
        }
      }
    }
  }
  

  namespace com.ifgoiano.mvppattern {
    namespace presenter {
      namespace api {
        interface com.ifgoiano.mvppattern.presenter.api.CountriesApi {
        }
      }
    }
  }
  

  namespace com.ifgoiano.mvppattern {
    namespace view {
      class com.ifgoiano.mvppattern.view.APIActivity {
      }
    }
  }
  

  namespace com.ifgoiano.mvppattern {
    namespace view {
      class com.ifgoiano.mvppattern.view.HomeActivity {
      }
    }
  }
  

  namespace com.ifgoiano.mvppattern {
    namespace view {
      class com.ifgoiano.mvppattern.view.LocalRepositoryActivity {
      }
    }
  }
  

  namespace com.ifgoiano.mvppattern {
    namespace view {
      class com.ifgoiano.mvppattern.view.RemoteRepositoryActivity {
      }
    }
  }
  

  com.ifgoiano.mvppattern.presenter.CountriesAPIPresenter o-- com.ifgoiano.mvppattern.presenter.api.CountriesAPIService : service
  com.ifgoiano.mvppattern.presenter.CountriesAPIPresenter o-- com.ifgoiano.mvppattern.presenter.CountriesAPIPresenter.View : view
  com.ifgoiano.mvppattern.presenter.CountriesLocalRepositoryPresenter -up-|> android.database.sqlite.SQLiteOpenHelper
  com.ifgoiano.mvppattern.presenter.CountriesLocalRepositoryPresenter o-- com.ifgoiano.mvppattern.presenter.CountriesLocalRepositoryPresenter.View : view
  com.ifgoiano.mvppattern.presenter.api.CountriesAPIService o-- com.ifgoiano.mvppattern.presenter.api.CountriesApi : api
  com.ifgoiano.mvppattern.view.APIActivity .up.|> com.ifgoiano.mvppattern.presenter.CountriesAPIPresenter.View
  com.ifgoiano.mvppattern.view.APIActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.ifgoiano.mvppattern.view.APIActivity o-- com.ifgoiano.mvppattern.presenter.CountriesAPIPresenter : presenter
  com.ifgoiano.mvppattern.view.HomeActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.ifgoiano.mvppattern.view.LocalRepositoryActivity .up.|> com.ifgoiano.mvppattern.presenter.CountriesLocalRepositoryPresenter.View
  com.ifgoiano.mvppattern.view.LocalRepositoryActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.ifgoiano.mvppattern.view.LocalRepositoryActivity o-- com.ifgoiano.mvppattern.presenter.CountriesLocalRepositoryPresenter : countriesLocalRepositoryPresenter
  com.ifgoiano.mvppattern.view.RemoteRepositoryActivity -up-|> androidx.appcompat.app.AppCompatActivity


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
